[package]
name = "red_blue_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
rand_chacha = "0.3.1"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
panic = "abort"